# PAMlab

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  README.md  SECURITY.md  TEST_RESULTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ad-mock-api/: .env.example  Dockerfile  README.md  package.json
ad-mock-api/src/: server.js
azure-ad-mock-api/: Dockerfile  README.md  package-lock.json  package.json
azure-ad-mock-api/__tests__/: api.test.js
azure-ad-mock-api/src/: server.js
azure-ad-mock-api/test/: health.test.js
cyberark-mock-api/: .env.example  Dockerfile  README.md  package.json
cyberark-mock-api/__tests__/: cyberark.test.js
cyberark-mock-api/src/: server.js
examples/powershell/: .gitignore  01-Onboarding.ps1  02-Offboarding.ps1  03-Role-Change.ps1  04-JIT-Access.ps1  05-Emergency-Revoke.ps1  06-Password-Rotation.ps1  07-Audit-Report.ps1  08-ServiceNow-Integration.ps1  11-Entra-PIM-Activation.ps1  README.md  _PAMlab-Module.psm1
fudo-mock-api/: .env.example  Dockerfile  README.md  package.json
fudo-mock-api/src/: server.js
jsm-mock-api/src/: server.js
matrix42-mock-api/: .env.example  API.md  Dockerfile  README.md  package.json
pamlab/: __init__.py  cli.py  core.py
pamlab-studio/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
pipeline-engine/: README.md
scripts/: smoke-test.sh  test-all.sh
servicenow-mock-api/: .env.example  Dockerfile  README.md  package.json
tests/: test_cli.py  test_core.py
video-assets/: demo-presentation-v2.html  test-wizard.js
(+126 files in other folders)
